[add] footer block

--- a/index.html
+++ b/index.html
@@ -86,24 +86,35 @@
                         </div>
                         <div class="order__steps">
                             <div class="step">
-                                <div class="step__icon">seorch</div>
+
+                                <div class="step__icon">
+                                    <span class="sprite">search</span>
+                                </div>
                                 <div class="step__text">Lorem ipsum dolor
                                     sit amet</div>
                             </div>
                             <div class="step">
-                                <div class="step__icon">%</div>
+                                <div class="step__icon">
+                                    <span class="sprite">percent</span>
+                                </div>
                                 <div class="step__text">Сonsecteturadipiscing elit</div>
                             </div>
                             <div class="step">
-                                <div class="step__icon">plus</div>
+                                <div class="step__icon">
+                                    <span class="sprite">add</span>
+                                </div>
                                 <div class="step__text">Sed do eiusmod tempor</div>
                             </div>
                             <div class="step">
-                                <div class="step__icon">mail</div>
+                                <div class="step__icon">
+                                    <span class="sprite">mail</span>
+                                </div>
                                 <div class="step__text">Esse cillum dolore eu fugiat</div>
                             </div>
                             <div class="step">
-                                <div class="step__icon">many</div>
+                                <div class="step__icon">
+                                    <span class="sprite">money</span>
+                                </div>
                                 <div class="step__text">Excepteur sint occaecat cupidatat non proident</div>
                             </div>
                         </div>
@@ -151,46 +162,48 @@
                 <div class="footer__copyright">
                     © 2018 «LoremIpsum.net» Все права защищены.
                 </div>
-                <div class="footer__wallets">
-                    <div class="wallet">
-                        <div class="wallet__icon">
-                            icon
+                <div class="separation"></div>
+                <div class="footer__section">
+                    <div class="footer__item">
+                        <div class="footer__item__icon">
+                            <span class="sprite">qiwi</span>
                         </div>
-                        <div class="wallet__name">
+                        <div class="footer__item__name">
                             Qiwi wallet
                         </div>
                     </div>
-                    <div class="wallet">
-                        <div class="wallet__icon">
-                            icon
+                    <div class="footer__item">
+                        <div class="footer__item__icon">
+                            <span class="sprite">yandexMoney</span>
                         </div>
-                        <div class="wallet__name">
+                        <div class="footer__item__name">
                             Yandex Money
                         </div>
                     </div>
-                    <div class="wallet">
-                        <div class="wallet__icon">
-                            icon
+                    <div class="footer__item">
+                        <div class="footer__item__icon">
+                            <span class="sprite">webMoney</span>
                         </div>
-                        <div class="wallet__name">
+                        <div class="footer__item__name">
                             Web Money
                         </div>
                     </div>
                 </div>
-                <div class="footer__contacts">
-                    <div class="contact">
-                        <div class="contact__icon">
-                            icon
+                <div class="separation"></div>
+                <div class="footer__section">
+                    <div class="footer__item">
+                        <div class="footer__item__icon">
+                            <span class="sprite">email</span>
                         </div>
-                        <div class="contact__name">
+                        <div class="footer__item__name">
                             info@ipsum228.com
                         </div>
                     </div>
-                    <div class="contact">
-                        <div class="contact__icon">
-                            icon
+                    <div class="footer__item">
+                        <div class="footer__item__icon">
+                            <span class="sprite">vk</span>
                         </div>
-                        <div class="contact__name">
+                        <div class="footer__item__name">
                             Мы вконтакте
                         </div>
                     </div>
