[edit] refact styles header and footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="styles/variables.css">
     <link rel="stylesheet" href="styles/normal.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/text-styles.css">
     <link rel="stylesheet" href="styles/visible.css">
 
@@ -55,8 +57,8 @@
                     </div>
 
                 </div>
-                <nav class="nav-mobile-menu">
-                    <ul id="nav-mobile-ul">
+                <nav class="nav-mobile-menu mobile">
+                    <ul class="nav-mobile-ul">
                     </ul>
                 </nav>
             </header>
