--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
                         <div class="order__form">
                             <form action="" class="form">
                                 <div class="form-item form-select">
-                                    <select placeholder="Выберите тип системы" name="system-type" >
+                                    <select class="custom-select" placeholder="Выберите тип системы" name="system-type" >
                                         <option value="system_1">Системы 1</option>
                                         <option value="system_2">Системы 2</option>
                                         <option value="system_3">Системы 3</option>
                                         <option value="system_4">Системы 4</option>
                                         <option value="system_5">Системы 5</option>
-                                        <option value="system_6">Системы 6</option>
+                                        <option value="system_6">Системы 6 Системы 6Системы 6Системы 6Системы 6Системы 6</option>
                                       </select>
                                 </div>
                                 <div class="form-item form-email">
