--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                         <option value="system_3">Системы 3</option>
                                         <option value="system_4">Системы 4</option>
                                         <option value="system_5">Системы 5</option>
-                                        <option value="system_6">Системы 6 Системы 6Системы 6Системы 6Системы 6Системы 6</option>
+                                        <option value="system_6">Системы 6</option>
                                       </select>
                                 </div>
                                 <div class="form-item form-email">
